namespace LoanManagementApp
{
    public class LoanApp
    {
        public static void Main(string[] args)
        {
            // Create a new loan
            Console.WriteLine("Enter the loan amount: ");
        }
    }
}