@startuml loan-management

class LoanApp {
  +static void main(String[] args)
}

class LoanInputHandler {
  -args: String[]
  +LoanInputHandler(String[] args)
  +GetPrincipal(): double
  +GetTermInMonths(): int
  +GetAnnualInterestRate(): double
  +GetUserInput(): double
}

class LoanCalculator {
  -Loan loan
  +LoanCalculator(Loan loan)
  +calculateMonthlyPayment(): double
  +generateAmortizationSchedule(): List<Payment>
}

class Loan {
  -double principal
  -int termInMonths
  -double annualInterestRate
  +Loan(double principal, int termInMonths, double annualInterestRate)
  +getPrincipal(): double
  +getTermInMonths(): int
  +getAnnualInterestRate(): double
}

class Payment {
  -int paymentNumber
  -double principalPaid
  -double remainingBalance
  +Payment(int paymentNumber, double principalPaid, double remainingBalance)
  +getPaymentNumber(): int
  +getPrincipalPaid(): double
  +getRemainingBalance(): double
}

class CSVWriter {
  +static void writeToFile(List<Payment> payments, String filePath)
}

LoanApp --> LoanCalculator : Uses >
LoanCalculator --> Loan : Uses >
LoanCalculator --> Payment : Creates >
LoanCalculator --> CSVWriter : Uses >

@enduml
